Added support for Localization in Eam Industry for Reference