@@ -27,6 +27,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-logging'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 
+	implementation files('../i18n/build/libs/i18n-0.1.0.jar')
+
 	// Swagger/OpenAPI Documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
@@ -55,4 +57,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+bootRun {
+	jvmArgs = ["--add-opens=java.base/java.util=ALL-UNNAMED"]
 }
